Updates FAQ, adds collapsible section headers, fixes margin jump animation bug, and adds link to home page.

--- a/app/styles/faq.scss
+++ b/app/styles/faq.scss
@@ -40,7 +40,7 @@ header > div {
   margin-top: 72px;
 }
 
-h2 {
+h2, h3 {
   cursor: pointer;
 
   &:before {
@@ -66,10 +66,10 @@ h2 {
   }
 }
 
-.answer {
+.answer, .section {
   display: none;
 
-  p, ul {
+  > p, > ul, > ol, > h3 {
     margin-top: 0; /* Prevents collapsing margin on animation. */
   }
 }
